Added comments to code

--- a/BigDataCA.ipynb
+++ b/BigDataCA.ipynb
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Import data set from kaggle\n",
@@ -2039,12 +2041,17 @@
     }
    ],
    "source": [
+    "#Import neural classifier \n",
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
+    "#scikt learn adopts the model construction and training interface \n",
     "mlpc = MLPClassifier()\n",
     "mlpc.fit(X_train, y_train)\n",
     "\n",
+    "#Apply the model\n",
     "boxing_data = mlpc.predict(X_test)\n",
+    "\n",
+    "#Determining the accuracy \n",
     "score = metrics.accuracy_score(y_test, boxing_data) * 100\n",
     "rounded_score = round(score, 1)\n",
     "print(\"Neural Network Classifier Accuracy: {}%\".format(rounded_score))"
@@ -2067,7 +2074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
